--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "smarty/smarty": "3.1.19"
+        "smarty/smarty": "3.1.19",
+        "firebase/php-jwt": "^5.4",
+        "google/apiclient": "2.10"
     }
 }
